add error handling in login form.

--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -90,6 +90,7 @@
 #- Change selectors same way, 1 selector per container
 
 #- Remove mainSelector to use only common at top level
+#- Handle errors on login form
 
 
 
