add svg image type for favicon.

--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -93,6 +93,8 @@
 
 #- Remove mainSelector to use only common at top level
 #- Handle errors on login form
+- Redirection fails after portfolio creation with a / in name
+- Add SEO tags in headers
 
 
 
