--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -93,7 +93,7 @@
 
 #- Remove mainSelector to use only common at top level
 #- Handle errors on login form
-- Redirection fails after portfolio creation with a / in name
+#- Redirection fails after portfolio creation with a / in name
 - Add SEO tags in headers
 
 
