--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -84,7 +84,7 @@
 #- Move weblog component to containers
 - Review modal to stand in child components
 - Review lightbox to stand in child components
-- Test creation of portfolios and weblog post with special chars (/"_-)
+#- Test creation of portfolios and weblog post with special chars (/"_-)
 #- Review server.js with unix socket
 #- Move portfolio component to containers
 #- Move librairy component to containers
