--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -60,6 +60,7 @@
 #- Fix bug with preview on empty markdown fields
 #- Add a way to edit contact description
 - Add a setting to prevent right clicks on pictures
+#- Add a message to select a collection, post or portfolio in librairy root
 #- Improve contextual menu to go on right or left side depending of viewport width
 - Move contextual menu state to main redux state
 #- Improve selection to unselect all on background click
