--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -108,6 +108,7 @@
 #    - client side rendering
 - Add opengraph data in head.
 - Add a popover with author info in signatures
+- Gallery-inline appears in posts even if no pictures
 - Change directory structure :
     - phiroom
         - django
