--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -107,6 +107,9 @@
 #    - server side rendering (portfolios, posts)
 #    - client side rendering
 - Add opengraph data in head.
+- Add piwik analytics
+#- Add google analytics
+#- Add google site verification ID.
 - Show a spinner when librairy's pictures are downloading.
 #- Add a popover with author info in signatures
 - Gallery-inline appears in posts even if no pictures
