--- a/src/js/todo.txt
+++ b/src/js/todo.txt
@@ -108,6 +108,8 @@
 #    - client side rendering
 - Add opengraph data in head.
 - Add piwik analytics
+    - rename field ID to url
+    - add field site ID
 #- Add google analytics
 #- Add google site verification ID.
 - Show a spinner when librairy's pictures are downloading.
