--- a/src/api/todo.txt
+++ b/src/api/todo.txt
@@ -9,7 +9,7 @@ conf:
 #    - review tests to use create_test_users
 #    - review model to match client side requirements
     - review pages to match client requirements
-    - add etsy link
+#    - add etsy link
     - change link to be like this :
         - link 1 : title - url
         - link 2 : type - url
@@ -34,8 +34,8 @@ weblog:
 
 user:
 #    - add instagram link
-    - add etsy link
-    - add blog link
+#    - add etsy link
+#    - add blog link
     - resize and rename avatars
     - create a default avatar
 
